--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <nav class="[ top-nav-style ] " >
         <figure class=" [ page-nav ]">
-            <a href="DairyliciousWeb/menu/Menu.html" > View Restaurant Menu </a>
+            <a href="Menu.html" > View Restaurant Menu </a>
         </figure>
         <h1> Dairylicious </h1>
         <p popover id="phone">Call us: 058-5808033</p>
