pages layout and styling

--- a/Reserve.html
+++ b/Reserve.html
@@ -24,10 +24,9 @@
     </button>
 </nav>
 </header>
-<body>
-    <h2>Reserve a table / Contact us:</h2>
-    <img src="restaurantday.jpeg" alt="photo of the restaurant day" style="width: 30vw;"/>
-    <article class="contactform">
+<body class=" [ main-layout ] " >
+    <h2 class="pagetitle">Reserve a table / Contact us:</h2>
+    <article class="grid2col">
         <form action="https://api.web3forms.com/submit" method="POST">
             <input type="hidden" name="access_key" value="f995202a-6259-4b3c-8a3c-eebe4c0935dc">
           <label for="fullname">Your full Name:</label>
@@ -41,6 +40,7 @@
       
           <button type="submit" value="Submit">Submit</button>
         </form>
+        <img src="restaurantday.jpeg" alt="photo of the restaurant day" style="width: 30vw;"/>
     </article>
 </body>
 <footer>
