--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <nav class="[ top-nav-style ] " >
         <figure class=" [ page-nav ]">
-            <a href="Menu.html" > View Restaurant Menu </a>
+            <a href="Menu.html" >View Restaurant Menu</a>
         </figure>
         <h1> Dairylicious </h1>
         <p popover id="phone">Call us: 058-5808033</p>
@@ -23,31 +23,32 @@
         </button>
     </nav>
 <body class=" [ main-layout ] ">
-    <article class=" [ header-layout ] [ header-style ] " >
-        <article  class=" [ container ] [ header-text-style ] ">
+    <article class=" [ header-layout ] " >
+        <article  class=" [ container ] ">
         <p>Fresh Ingredients.</p>
         <p>Innovating Menu.</p>
         <p>Exciting Flavors.</p>
         </article>
-        <figure class=" [ header-img-style ] [ header-img-layout ] ">
-        <img src="headerdish.jpeg" alt="our dishes"/>
-    </figure>
+        <img class="[ header-img-layout ] " src="headerdish.jpeg" alt="our dishes"/>
     </article>
-    <article>
+    <article class=" [ aboutus ] ">
         <p>Dairylicious is a Kosher dairy restaurant.</p>
         <p>Our goal is to represent the essence of a modern Kosher dairy cuisine,</p>  
         <p>We are focused on creating an innovative menu and an elegant dining experience</p>
-        <img src="chefserving.avif" alt="our chef serving a dish"style="width: 30vw;"/>
-        <img src="fresh.jpeg" alt="our fresh Ingredients" style="width: 30vw;"/>
-        <img src="restauranteve.jpeg" alt="photo of the restaurant night" style="width: 30vw;"/>
     </article>
-    <figure class=" [ page-nav ]" style="width: 10vw;">
+    <article class=" [ gallery ] ">
+        <img class=" [ imggallery ] " src="restauranteve.jpeg" alt="photo of the restaurant night" />
+        <img class=" [ imggallery ] " src="chefserving.avif" alt="our chef serving a dish"/>
+    </article>
+    <article class=" [ bottomnav ] ">
+        <figure class=" [ page-nav ]" >
         <a href="DairyliciousWeb/event/Event.html" > Host an event </a>
     </figure>
-    <figure><img  src="awardlogo.jpeg" alt="award logo" style="width: 30vw;"/></figure>
-    <figure  class=" [ page-nav ]"  style="width: 10vw;">
+    <img  class=" [ awardimg ] "  src="awardlogo.jpeg" alt="award logo"/>
+    <figure  class=" [ page-nav ]" >
         <a href="Reserve.html" > Book a table / contact us </a>
     </figure>
+    </article>
 </body>
 <footer>
     <article class="footer">
