--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <p>We are focused on creating an innovative menu and an elegant dining experience</p>
     </article>
     <article class=" [ gallery ] ">
-        <img class=" [ imggallery ] " src="restauranteve.jpeg" alt="photo of the restaurant night" />
-        <img class=" [ imggallery ] " src="chefserving.avif" alt="our chef serving a dish"/>
+        <img class=" [ igallery ] " src="restauranteve.jpeg" alt="photo of the restaurant night" />
+        <img class=" [ igallery ] " src="chefserving.avif" alt="our chef serving a dish"/>
     </article>
     <article class=" [ bottomnav ] ">
         <figure class=" [ page-nav ]" >
