style, menusetup,photos

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </article>
     <article class=" [ gallery ] ">
         <img class=" [ imggallery ] " src="restauranteve.jpeg" alt="photo of the restaurant night" />
-        <img class=" [ imggallery ] " src="chefserving.avif" alt="our chef serving a dish"/>
+        <img class=" [ imggallery ] " src="photos/chefserving.avif" alt="our chef serving a dish"/>
     </article>
     <article class=" [ bottomnav ] ">
         <figure class=" [ page-nav ]" >
