--- a/menu/Menu.html
+++ b/menu/Menu.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dairylicious Menu</title>
-    <link rel="stylesheet" href="dist/reset.css">
-    <link rel="stylesheet" href="dist/composition.css">
-    <link rel="stylesheet" href="dist/utility.css">
-    <link rel="stylesheet" href="dist/block.css">
+    <link rel="stylesheet" href="dist/resetM.css">
+    <link rel="stylesheet" href="dist/compositionM.css">
+    <link rel="stylesheet" href="dist/utilityM.css">
+    <link rel="stylesheet" href="dist/blockM.css">
 </head>
 <body>
     <header>
