--- a/event/Event.html
+++ b/event/Event.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dairylicious Menu</title>
-    <link rel="stylesheet" href="dist/reset.css">
-    <link rel="stylesheet" href="dist/composition.css">
-    <link rel="stylesheet" href="dist/utility.css">
-    <link rel="stylesheet" href="dist/block.css">
+    <link rel="stylesheet" href="dist/resetE.css">
+    <link rel="stylesheet" href="dist/compositionE.css">
+    <link rel="stylesheet" href="dist/utilityE.css">
+    <link rel="stylesheet" href="dist/blockE.css">
 </head>
 <body>
     
