page navigation and Sass

--- a/Reserve.html
+++ b/Reserve.html
@@ -40,7 +40,7 @@
       
           <button type="submit" value="Submit">Submit</button>
         </form>
-        <img src="restaurantday.jpeg" alt="photo of the restaurant day" style="width: 30vw;"/>
+        <img src="photos/restaurantday.jpeg" alt="photo of the restaurant day" style="width: 30vw;"/>
     </article>
 </body>
 <footer>
