--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <h1> Dairylicious </h1>
         <p popover id="phone">Call us: 058-5808033</p>
         <button class=" [ info-buttons ] " type="button" popovertarget="phone" popovertargetaction="toggle" value="Toggle">
-            <a href="tel:058-5808-033"><img background="none" src="phoneicon.png" /></a>
+            <a href="tel:058-5808-033"><img background="none" src="photos/phoneicon.png" /></a>
         </button>
         <p popover id="address">Our address: 29 Hamered Street , Tel Aviv 68125. P.O.Box 50084. </p>
         <button class=" [ info-buttons ] "  type="button" popovertarget="address" popovertargetaction="toggle" value="Toggle">
-            <img background="none" src="mapicon.png"/>
+            <img background="none" src="photos/mapicon.png"/>
         </button>
     </nav>
 <body class=" [ main-layout ] ">
@@ -29,7 +29,7 @@
         <p>Innovating Menu.</p>
         <p>Exciting Flavors.</p>
         </article>
-        <img class="[ header-img-layout ] " src="headerdish.jpeg" alt="our dishes"/>
+        <img class="[ header-img-layout ] " src="photos/headerdish.jpeg" alt="our dishes"/>
     </article>
     <article class=" [ aboutus ] ">
         <p>Dairylicious is a Kosher dairy restaurant.</p>
@@ -37,14 +37,14 @@
         <p>We are focused on creating an innovative menu and an elegant dining experience</p>
     </article>
     <article class=" [ gallery ] ">
-        <img class=" [ imggallery ] " src="restauranteve.jpeg" alt="photo of the restaurant night" />
+        <img class=" [ imggallery ] " src="photos/restauranteve.jpeg" alt="photo of the restaurant night" />
         <img class=" [ imggallery ] " src="photos/chefserving.avif" alt="our chef serving a dish"/>
     </article>
     <article class=" [ bottomnav ] ">
         <figure class=" [ page-nav ]" >
         <a href="DairyliciousWeb/event/Event.html" > Host an event </a>
     </figure>
-    <img  class=" [ awardimg ] "  src="awardlogo.jpeg" alt="award logo"/>
+    <img  class=" [ awardimg ] "  src="photos/awardlogo.jpeg" alt="award logo"/>
     <figure  class=" [ page-nav ]" >
         <a href="Reserve.html" > Book a table / contact us </a>
     </figure>
