--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </article>
     <article class=" [ bottomnav ] ">
         <figure class=" [ page-nav ]" >
-        <a href="DairyliciousWeb/event/Event.html" > Host an event </a>
+        <a href="event/Event.html" > Host an event </a>
     </figure>
     <img  class=" [ awardimg ] "  src="photos/awardlogo.jpeg" alt="award logo"/>
     <figure  class=" [ page-nav ]" >
