--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <link rel="stylesheet" href="dist/utilities.css" />
 </head>
     <nav class="[ top-nav-style ] " >
-        <figure class=" [ page-nav ]">
-            <a href="Menu.html" >View Restaurant Menu</a>
+        <figure class=" [ page-nav ]" >
+            <a href="Menu.html" >
+                <th class="th1" runat="server" colspan="1"> 
+                <span class="fullString"> View Restaurant Menu </span>
+                <span class="part"> View Menu</span>  
+                <th>         
+            </a>
         </figure>
         <h1> Dairylicious </h1>
         <p popover id="phone">Call us: 058-5808033</p>
