--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="[ top-nav-style ] " >
         <figure class=" [ page-nav ]" >
             <a href="Menu.html" >
-                <th class="th1" runat="server" colspan="1"> 
+                <th runat="server" colspan="1"> 
                 <span class="fullString"> View Restaurant Menu </span>
                 <span class="part"> View Menu</span>  
                 <th>         
