--- a/Menu.html
+++ b/Menu.html
@@ -13,7 +13,7 @@
     <header>
         <nav class="[ top-nav-style ] " >
             <figure class=" [ page-nav ]">
-                <a href="index.html" > Go to main page 🏠</a>
+                <a href="../../index.html" > Go to main page 🏠</a>
             </figure>
             <h1> Dairylicious </h1>
             <p popover id="phone">Call us: 058-5808033</p>
@@ -40,7 +40,11 @@
                 <p>Lorem ipsum dolor sit amet.</p>
             </ul>
         </article>
-        <article class="salads">
+        <article class="img-chef">
+            <img src="photos/chef.jpg
+            " alt="">
+        </article>
+        <article class="salad">
             <h2>Salads</h2>
             <ul>
                 <li>Ceaser salad-----25$</li>
@@ -52,6 +56,9 @@
                 <li>Our caprese salad-----25$</li>
                 <p>Lorem ipsum dolor sit amet.</p>
             </ul>
+        </article>
+        <article class="img-salad">
+            <img src="photos/salad.jpg" alt="">
         </article>
         <article class="pasta">
             <h2>Pastas</h2>
@@ -66,6 +73,9 @@
                 <p>Lorem ipsum dolor sit amet.</p>
             </ul>
         </article>
+        <article class="img-pasta">
+            <img src="photos/pasta .jpg" alt="">
+        </article>
         <article class="pizza">
             <h2>Pizzas</h2>
             <ul>
@@ -79,6 +89,9 @@
                 <p>Lorem ipsum dolor sit amet.</p>
             </ul>
         </article>
+        <article class="img-pizza">
+            <img src="photos/pizza.jpg" alt="">
+        </article>
         <article class="mains">
             <h2>Mains</h2>
             <ul>
@@ -91,6 +104,9 @@
                 <li>Bistecca di tonno-----53$</li>
                 <p>Lorem ipsum dolor sit amet.</p>
             </ul>
+        </article>
+        <article class="img-vegen-burger">
+            <img src="photos/vegen-burger.jpg" alt="">
         </article>
     </main>
     <footer class="end">
