--- a/Event.html
+++ b/Event.html
@@ -3,27 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dairylicious Menu</title>
-    <link rel="stylesheet" href="dist/resetE.css">
-    <link rel="stylesheet" href="dist/compositionE.css">
-    <link rel="stylesheet" href="dist/utilityE.css">
-    <link rel="stylesheet" href="dist/blockE.css">
+    <title>Dairylicious Events</title>
+    <link rel="stylesheet" href="dist/reset.css">
+    <link rel="stylesheet" href="dist/composition.css">
+    <link rel="stylesheet" href="dist/utility.css">
+    <link rel="stylesheet" href="dist/block.css">
 </head>
 <body>
-    
     <header>
-        <nav>
-            <article class="navigation">
-                <button> <a href="index.html">go to main page 🏠</a></button>
-                <h1 class="title">Dairylicious Menu:</h1>                
-            </article>
+        <nav class="[ top-nav-style ] " >
+            <figure class=" [ page-nav ]">
+                <a href="../../index.html" > Go to main page 🏠</a>
+            </figure>
+            <h1> Dairylicious </h1>
+            <p popover id="phone">Call us: 058-5808033</p>
+            <button class=" [ info-buttons ] " type="button" popovertarget="phone" popovertargetaction="toggle" value="Toggle">
+                <a href="tel:058-5808-033"><img background="none" src="image's/WhatsApp telephone.jpg" alt="a telephone sign"/></a>
+            </button>
+            <p popover id="address">Our address: 29 Hamered Street , Tel Aviv 68125. P.O.Box 50084. </p>
+            <button class=" [ info-buttons ] "  type="button" popovertarget="address" popovertargetaction="toggle" value="Toggle">
+                <img background="none" src="image's/WhatsApp map sign.jpg" alt="a map sign"/>
+            </button>
         </nav>
     </header>
-
     <main>
-
+        <article class="main">
+            <article class="top-main">
+                        <h2>Our Events</h2>
+                        <p>Stay Updated on Our Upcoming Events or Book Your Own Special Occasion</p>
+                        <p class="first-event-pargraph"> Looking for the perfect place to host your next event? Whether it's a corporate gathering, business event, birthday celebration, or any special occasion, Dairylicious offers the ideal atmosphere. We can accommodate events of all sizes, from intimate groups of 20 guests to larger gatherings of up to 150 guests. Let us handle the details so you can focus on enjoying your time with friends, family, colleagues, or clients.</p>
+            </article>
+                        <p class="information-paragraph">For more information just click on the following link, or you click on the phone logo in the header of the screen.</p>
+                        <img class="img-1" src="image's/room-photo-2.jpg" alt="">
+        </article>
     </main>
-
     <footer class="end">
         <article class="footer">
             <p>&copy;all rights reserved 2024 </p>
