--- a/Reserve.html
+++ b/Reserve.html
@@ -33,7 +33,7 @@
     <h2 class="pagetitle">Reserve a table / Contact us:</h2>
     <article class="grid2col">
         <article class="contactform">
-        <form  action="https://api.web3forms.com/submit" method="POST">
+        <form action="https://api.web3forms.com/submit" method="POST">
             <input type="hidden" name="access_key" value="f995202a-6259-4b3c-8a3c-eebe4c0935dc">
           <label for="fullname">Your full Name:</label>
           <input type="text" id="fullname" name="fullname" placeholder="Write here your full name.." required>
@@ -44,10 +44,10 @@
           <label for="subject">Your message:</label>
           <textarea id="subject" name="subject" placeholder="Write here that date and time you wish to arrive / other subjects you wish to ask about.." style="height:200px" required></textarea>
       
-          <button type="submit" value="Submit">Submit</button>
+          <button class="submit" type="submit" value="Submit">Submit</button>
         </form>
     </article>
-        <img src="photos/restaurantday.jpeg" alt="photo of the restaurant day" style="width: 30vw;"/>
+        <img class="contactsimg" src="photos/restaurantday.jpeg" alt="photo of the restaurant day" />
     </article>
 </body>
 <footer>
