--- a/Event.html
+++ b/Event.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dairylicious Events</title>
-    <link rel="stylesheet" href="dist/reset.css">
-    <link rel="stylesheet" href="dist/composition.css">
-    <link rel="stylesheet" href="dist/utility.css">
-    <link rel="stylesheet" href="dist/block.css">
+    <link rel="stylesheet" href="dist/resetE.css">
+    <link rel="stylesheet" href="dist/compositionE.css">
+    <link rel="stylesheet" href="dist/utilityE.css">
+    <link rel="stylesheet" href="dist/blockE.css">
 </head>
 <body>
     <header>
         <nav class="[ top-nav-style ] " >
             <figure class=" [ page-nav ]">
-                <a href="../../index.html" > Go to main page 🏠</a>
+                <a href="index.html" target="_blank"> Go to main page 🏠 </a>
             </figure>
             <h1> Dairylicious </h1>
             <p popover id="phone">Call us: 058-5808033</p>
             <button class=" [ info-buttons ] " type="button" popovertarget="phone" popovertargetaction="toggle" value="Toggle">
-                <a href="tel:058-5808-033"><img background="none" src="image's/WhatsApp telephone.jpg" alt="a telephone sign"/></a>
+                <a href="tel:058-5808-033"><img background="none" src="photos/phoneicon.png" /></a>
             </button>
             <p popover id="address">Our address: 29 Hamered Street , Tel Aviv 68125. P.O.Box 50084. </p>
             <button class=" [ info-buttons ] "  type="button" popovertarget="address" popovertargetaction="toggle" value="Toggle">
-                <img background="none" src="image's/WhatsApp map sign.jpg" alt="a map sign"/>
+                <img background="none" src="photos/mapicon.png"/>
             </button>
         </nav>
     </header>
@@ -32,9 +32,14 @@
                         <h2>Our Events</h2>
                         <p>Stay Updated on Our Upcoming Events or Book Your Own Special Occasion</p>
                         <p class="first-event-pargraph"> Looking for the perfect place to host your next event? Whether it's a corporate gathering, business event, birthday celebration, or any special occasion, Dairylicious offers the ideal atmosphere. We can accommodate events of all sizes, from intimate groups of 20 guests to larger gatherings of up to 150 guests. Let us handle the details so you can focus on enjoying your time with friends, family, colleagues, or clients.</p>
-            </article>
-                        <p class="information-paragraph">For more information just click on the following link, or you click on the phone logo in the header of the screen.</p>
-                        <img class="img-1" src="image's/room-photo-2.jpg" alt="">
+                        <p class="information-paragraph">
+                         For contant you can click on the 
+                         following link down below.</p>
+                         <img class="img-1" src="photos/room(1).jpg" alt="">
+            <article>
+                <button>
+                   <a href="Reserve.html" target="_blank">-Click here to reserve an event-</a>
+                </button>
         </article>
     </main>
     <footer class="end">
