--- a/Menu.html
+++ b/Menu.html
@@ -13,16 +13,16 @@
     <header>
         <nav class="[ top-nav-style ] " >
             <figure class=" [ page-nav ]">
-                <a href="../../index.html" > Go to main page 🏠</a>
+                <a href="index.html" target="_blank"> Go to main page 🏠 </a>
             </figure>
             <h1> Dairylicious </h1>
             <p popover id="phone">Call us: 058-5808033</p>
             <button class=" [ info-buttons ] " type="button" popovertarget="phone" popovertargetaction="toggle" value="Toggle">
-                <a href="tel:058-5808-033"><img background="none" src="photos/WhatsApp telephone.jpg" /></a>
+                <a href="tel:058-5808-033"><img background="none" src="photos/phoneicon.png" /></a>
             </button>
             <p popover id="address">Our address: 29 Hamered Street , Tel Aviv 68125. P.O.Box 50084. </p>
             <button class=" [ info-buttons ] "  type="button" popovertarget="address" popovertargetaction="toggle" value="Toggle">
-                <img background="none" src="photos/WhatsApp map sign.jpg"/>
+                <img background="none" src="photos/mapicon.png"/>
             </button>
         </nav>
     </header>
