--- a/Reserve.html
+++ b/Reserve.html
@@ -50,7 +50,7 @@
         <img class="contactsimg" src="photos/restaurantday.jpeg" alt="photo of the restaurant day" />
     </article>
 </body>
-<footer>
+<footer class="end">
     <article class="footer">
         <p>&copy;all rights reserved 2024 </p>
         <button>
