--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </figure>
     </article>
 </body>
-<footer>
+<footer class="end">
     <article class="footer">
         <p>&copy;all rights reserved 2024 </p>
         <button>
